--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p>C'est la musique qui vient de loin</p>
                     <p>Elle plane, elle flotte, elle nous traverse</p>
                     <p>
-                        Elle vit, elle plisse elle nous caresse
+                        Elle vit, elle glisse elle nous caresse
                         <span class="fa fa-quote-right"></span>
                     </p>
                 </div>
@@ -120,6 +120,7 @@
 <section id="team" class="bg-light-gray">
     <div id="team-member-bubbles">
         <div class="hero">
+            <img src="img/team-bg-768w.jpg" title="Bernard Vignal, les membres" class="team-no-hero" />
             <div class="team-member-bubble team-member-outerLeft">
                 <a href="#teamMemberOuterLeft" data-toggle="modal">
                     <i class="fa fa-commenting"></i>
@@ -140,7 +141,7 @@
                     <i class="fa fa-commenting"></i>
                 </a>
             </div>
-            <div class="container">
+            <div class="container team-catchphrase-container">
                 <div class="row overlay-white team-catchphrase">
                     <div class="col-lg-12 text-left">
                         <h2 class="section-heading">Tour de chant tout public</h2>
