#32 : web performance optimisations

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/agency.css?v5" rel="stylesheet">
+    <link href="css/agency.css?v6" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script async src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script async src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 </head>
@@ -316,7 +316,7 @@
                             <div class="audio-wrapper">
                                 <audio id="audio" tabindex="0" preload="auto" controls="controls">
                                     <source type="audio/mp3"
-                                            src="https://1268182399.rsc.cdn77.org/media/audio/01-approche_approche.mp3"/>
+                                            src="https://1268182399.rsc.cdn77.org/media/audio/1-approche.mp3"/>
                                     <div class="audio-no-html5">
                                         <p>Désolé, votre navigateur ne permet pas de jouer notre musique. Veuillez
                                             télécharger l'un
@@ -777,20 +777,20 @@
 
 <div id="viewport-spy"></div>
 <!-- jQuery -->
-<script src="vendor/jquery/jquery.min.js"></script>
+<script async src="vendor/jquery/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script async src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Contact Form JavaScript -->
-<script src="js/jqBootstrapValidation.js?v5"></script>
-<script src="js/contact_me.js?v5"></script>
+<script async src="js/jqBootstrapValidation.js?v6"></script>
+<script async src="js/contact_me.js?v6"></script>
 
 <!-- Theme JavaScript -->
-<script src="js/agency.js?v5"></script>
+<script async src="js/agency.js?v6"></script>
 
 </body>
 
