--- a/index.html
+++ b/index.html
@@ -780,14 +780,14 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script async src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Contact Form JavaScript -->
-<script async src="js/jqBootstrapValidation.js?v6"></script>
-<script async src="js/contact_me.js?v6"></script>
+<script src="js/jqBootstrapValidation.js?v6"></script>
+<script src="js/contact_me.js?v6"></script>
 
 <!-- Theme JavaScript -->
 <script async src="js/agency.js?v6"></script>
