--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="description" content="Vignal en Chanson">
+    <meta name="description" content="Bernard Vignal, Auteur compositeur, vous accueille sur son site.">
     <meta name="author" content="Bernard Vignal">
 
-    <title>Vignal en chanson</title>
+    <title>Bernard Vignal</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +47,7 @@
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                <span class="sr-only">Réduire la navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <!--<a class="navbar-brand page-scroll" href="#page-top">Vignal en chanson</a>-->
         </div>
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="intro-text">
-                        <div class="intro-lead-in">Bernard Vignal</div>
+                        <h1 class="intro-lead-in">Bernard Vignal</h1>
                     </div>
                 </div>
                 <div class="col-sm-4"></div>
@@ -144,7 +144,7 @@
             <div class="container team-catchphrase-container">
                 <div class="row overlay-white team-catchphrase">
                     <div class="col-lg-12 text-left">
-                        <h2 class="section-heading">Tour de chant tout public</h2>
+                        <h1 class="section-heading">Tour de chant tout public</h1>
                         <a href="#music" class="page-scroll next-button">
                             <i class="fa fa-angle-down text-center"></i>
                         </a>
@@ -157,21 +157,21 @@
         <div class="container team-medals">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Tour de chant tout public</h2>
+                    <h1 class="section-heading">Tour de chant tout public</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
-                        <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
+                        <h2>Bernard <span class="text-uppercase">Vignal</span></h2>
                         <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
-                        <h4>Emmanuel <span class="text-uppercase">Megier</span></h4>
+                        <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
                         <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                     </div>
                 </div>
@@ -180,14 +180,14 @@
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
-                        <h4>Cécile <span class="text-uppercase">Chabert</span></h4>
+                        <h2>Cécile <span class="text-uppercase">Chabert</span></h2>
                         <p class="text-muted">Voix, Percussions légères</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
-                        <h4>Muriel <span class="text-uppercase">Roger</span></h4>
+                        <h2>Muriel <span class="text-uppercase">Roger</span></h2>
                         <p class="text-muted">Voix, Percussions légères</p>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
-                                <h4>Muriel <span class="text-uppercase">Roger</span></h4>
+                                <h2>Muriel <span class="text-uppercase">Roger</span></h2>
                                 <p class="text-muted">Voix, Percussions légères</p>
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -229,7 +229,7 @@
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
-                                <h4>Cécile <span class="text-uppercase">Chabert</span></h4>
+                                <h2>Cécile <span class="text-uppercase">Chabert</span></h2>
                                 <p class="text-muted">Voix, Percussions légères</p>
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -252,7 +252,7 @@
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
-                                <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
+                                <h2>Bernard <span class="text-uppercase">Vignal</span></h2>
                                 <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -275,7 +275,7 @@
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
-                                <h4>Emmanuel <span class="text-uppercase">Megier</span></h4>
+                                <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
                                 <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -296,8 +296,8 @@
     <div class="container">
         <div class="row music-header">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Extraits</h2>
-                <h3 class="section-subheading text-muted">Vidéo, enregistrement audio, photos.</h3>
+                <h1 class="section-heading">Extraits</h1>
+                <h2 class="section-subheading text-muted">Vidéo, enregistrement audio, photos.</h2>
             </div>
         </div>
         <div class="row">
@@ -307,7 +307,7 @@
                         <div class="col-lg-12">
                             <a href="https://www.youtube.com/" target="_blank">
                                 <i class="fa fa-youtube-square"></i>
-                                Rejoignez notre chaine YouTube
+                                <p>Rejoignez notre chaine YouTube</p>
                             </a>
                         </div>
                     </div>
@@ -348,12 +348,6 @@
                                             <span>Un beau trésor</span>
                                         </a>
                                     </li>
-                                    <!--<li class="audio-track audio-track-even ">-->
-                                        <!--<a href="https://1268182399.rsc.cdn77.org/media/audio/02-le_blues_du_cycliste.mp3">-->
-                                            <!--<i class="fa fa-play" aria-hidden="true"></i>-->
-                                            <!--<span>Le blues du cycliste</span>-->
-                                        <!--</a>-->
-                                    <!--</li>-->
                                 </ul>
                             </div>
                         </div>
@@ -386,100 +380,14 @@
     </div>
 </section>
 
-<!-- Portfolio Grid Section -->
-<!--<section id="gallery" class="bg-light-gray">-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-lg-12 text-center">-->
-                <!--<h2 class="section-heading">Titre section galerie</h2>-->
-                <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col-md-4 col-sm-6 gallery-item">-->
-                <!--<a href="#galleryModal1" class="gallery-link" data-toggle="modal">-->
-                    <!--<div class="gallery-hover">-->
-                        <!--<div class="gallery-hover-content">-->
-                            <!--<i class="fa fa-expand fa-3x"></i>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<img src="img/gallery/1-preview.jpg" class="img-responsive" alt="Photo Galerie 1">-->
-                <!--</a>-->
-                <!--<div class="gallery-caption">-->
-                    <!--<h4>Titre Image 1</h4>-->
-                    <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-md-4 col-sm-6 gallery-item">-->
-                <!--<a href="#galleryModal2" class="gallery-link" data-toggle="modal">-->
-                    <!--<div class="gallery-hover">-->
-                        <!--<div class="gallery-hover-content">-->
-                            <!--<i class="fa fa-expand fa-3x"></i>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<img src="img/gallery/2-preview.jpg" class="img-responsive" alt="Photo Galerie 2">-->
-                <!--</a>-->
-                <!--<div class="gallery-caption">-->
-                    <!--<h4>Titre Image 2</h4>-->
-                    <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-md-4 col-sm-6 gallery-item">-->
-                <!--<a href="#galleryModal3" class="gallery-link" data-toggle="modal">-->
-                    <!--<div class="gallery-hover">-->
-                        <!--<div class="gallery-hover-content">-->
-                            <!--<i class="fa fa-expand fa-3x"></i>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<img src="img/gallery/3-preview.jpg" class="img-responsive" alt="Photo Galerie 3">-->
-                <!--</a>-->
-                <!--<div class="gallery-caption">-->
-                    <!--<h4>Titre Image 3</h4>-->
-                    <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col-md-4 col-sm-6 gallery-item">-->
-                <!--<a href="#galleryModal4" class="gallery-link" data-toggle="modal">-->
-                    <!--<div class="gallery-hover">-->
-                        <!--<div class="gallery-hover-content">-->
-                            <!--<i class="fa fa-expand fa-3x"></i>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<img src="img/gallery/4-preview.jpg" class="img-responsive" alt="Photo Galerie 4">-->
-                <!--</a>-->
-                <!--<div class="gallery-caption">-->
-                    <!--<h4>Titre Image 4</h4>-->
-                    <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-md-4 col-sm-6 gallery-item">-->
-                <!--<a href="#galleryModal5" class="gallery-link" data-toggle="modal">-->
-                    <!--<div class="gallery-hover">-->
-                        <!--<div class="gallery-hover-content">-->
-                            <!--<i class="fa fa-expand fa-3x"></i>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<img src="img/gallery/5-preview.jpg" class="img-responsive" alt="Photo Galerie 5">-->
-                <!--</a>-->
-                <!--<div class="gallery-caption">-->
-                    <!--<h4>Titre Image 5</h4>-->
-                    <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</section>-->
-
 <!-- Contact Section -->
 <section id="contact">
     <div class="overlay">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contactez-nous</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h1 class="section-heading">Contactez-nous</h1>
+                    <h2 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h2>
                 </div>
             </div>
             <div class="row">
@@ -500,8 +408,7 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="tel" class="form-control" placeholder="Votre numéro de téléphone *"
-                                           id="phone" required
-                                           data-validation-required-message="Veuillez saisir votre numéro de téléphone.">
+                                           id="phone">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -514,6 +421,7 @@
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
+                                <!--<div class="g-recaptcha" data-sitekey="6LdRWRMUAAAAANJmTvQOI0Z_KMJ130XZPHWZ351E"></div>-->
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Envoyer</button>
                             </div>
@@ -529,25 +437,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Your Website 2016</span>
-            </div>
-            <div class="col-md-4">
-                <ul class="list-inline social-buttons">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                    </li>
-                </ul>
+                <span class="copyright">Copyright &copy; Bernard Vignal 2016</span>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
-                    <li><a href="#">Privacy Policy</a>
-                    </li>
-                    <li><a href="#">Terms of Use</a>
+                    <li>
+                        <a href="#">Mentions légales</a>
                     </li>
                 </ul>
+            </div>
+            <div class="col-md-4">
+                <span class="copyright">Conception par Puzzlout</span>
             </div>
         </div>
     </div>
@@ -776,22 +676,13 @@
 </div>
 
 <div id="viewport-spy"></div>
-<!-- jQuery -->
+<script src='https://www.google.com/recaptcha/api.js?hl=fr'></script>
 <script src="vendor/jquery/jquery.min.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
 <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-<!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-<!-- Contact Form JavaScript -->
-<script src="js/jqBootstrapValidation.js?v6"></script>
-<script src="js/contact_me.js?v6"></script>
-
-<!-- Theme JavaScript -->
-<script async src="js/agency.js?v6"></script>
-
+<script src="js/jqBootstrapValidation.js"></script>
+<script src="js/contact_me.js"></script>
+<script async src="js/agency.js"></script>
 </body>
 
 </html>
