--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
                 <div class="intro-song">
                     <p>
                         <span class="fa fa-quote-left"></span>
-                        Approche, approche écoute bien
+                        Approche approche écoute bien
                     </p>
                     <p>C'est la musique qui vient de loin</p>
-                    <p>Elle plane, elle flotte, elle nous traverse</p>
+                    <p>Elle plane elle flotte elle nous traverse</p>
                     <p>
-                        Elle vit, elle glisse elle nous caresse
+                        Elle vit elle glisse elle nous caresse
                         <span class="fa fa-quote-right"></span>
                     </p>
                 </div>
@@ -155,6 +155,18 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h1 class="section-heading">Tour de chant tout public</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-12 gallery-item">
+                    <a href="#galleryModal2" class="gallery-link" data-toggle="modal">
+                        <div class="gallery-hover">
+                            <div class="gallery-hover-content">
+                                <i class="fa fa-expand fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/gallery/2-preview.jpg" class="img-responsive" alt="Le groupe sur scène">
+                    </a>
                 </div>
             </div>
             <div class="row">
@@ -288,8 +300,6 @@
 </div>
 
 <section id="music">
-    <!--<div class="hero hero-fixed">-->
-    <!--<div class="overlay-dark">-->
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -297,7 +307,9 @@
                     <div class="row video-content">
                         <div class="col-lg-12">
                             <a href="https://www.youtube.com/" target="_blank">
+                                <i class="fa fa-angle-double-right"></i>
                                 <i class="fa fa-youtube-square"></i>
+                                <i class="fa fa-angle-double-left"></i>
                                 <h1>Rejoignez notre chaine YouTube ...</h1>
                             </a>
                         </div>
@@ -356,7 +368,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/gallery/1-preview.jpg" class="img-responsive" alt="Photo Galerie 1">
+                        <img src="img/gallery/1-preview.jpg" class="img-responsive" alt="Cécile Chabert et Muriel Roger">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-12 gallery-item">
@@ -366,18 +378,27 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/gallery/4-preview.jpg" class="img-responsive" alt="Photo Galerie 4">
+                        <img src="img/gallery/4-preview.jpg" class="img-responsive" alt="Bernard Vignal et Emmanuel Megier">
                     </a>
                 </div>
             </div>
         </div>
     </div>
-    <!--</div>-->
-    <!--</div>-->
 </section>
 
 <section id="school">
-    <div class="hero"></div>
+    <div class="hero">
+        <div class="overlay-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <h1></h1>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section id="contact">
