--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a class="page-scroll" href="#music">Extraits</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#gallery">Scolaire</a>
+                    <a class="page-scroll" href="#school">Scolaire</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contacts</a>
@@ -392,8 +392,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h1></h1>
-                        <p></p>
+                        <h1 class="section-heading">Nous vous proposons des ateliers<br/>
+                            De sensibilisation aux chansons du spectable.</h1>
+                        <h2 class="section-subheading">Les ateliers seront menés par un membre du groupe</h2>
+                        <h2 class="section-subheading">Spécialiste des choeurs d'enfants.</h2>
                     </div>
                 </div>
             </div>
