--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <section id="team" class="bg-light-gray">
     <div id="team-member-bubbles">
         <div class="hero">
-            <img src="img/team-bg-768w.jpg" title="Bernard Vignal, les membres" class="team-no-hero"/>
+            <img data-src="img/team-bg-768w.jpg" title="Bernard Vignal, les membres" class="lazyload team-no-hero"/>
             <div class="team-member-bubble team-member-outerLeft">
                 <a href="#teamMemberOuterLeft" data-toggle="modal">
                     <i class="fa fa-commenting"></i>
@@ -165,21 +165,21 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/gallery/2-preview.jpg" class="img-responsive" alt="Le groupe sur scène">
+                        <img data-src="img/gallery/2-preview.jpg" class="lazyload img-responsive" alt="Le groupe sur scène">
                     </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
+                        <img data-src="img/team/p1-final.jpg" class="lazyload img-responsive img-circle" alt="Bernard Vignal">
                         <h2>Bernard <span class="text-uppercase">Vignal</span></h2>
                         <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
+                        <img data-src="img/team/p2-final.jpg" class="lazyload img-responsive img-circle" alt="Member 2">
                         <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
                         <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                     </div>
@@ -188,14 +188,14 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
+                        <img data-src="img/team/p3-final.jpg" class="lazyload img-responsive img-circle" alt="Member 3">
                         <h2>Cécile <span class="text-uppercase">Chabert</span></h2>
                         <p class="text-muted">Voix, Percussions légères</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
+                        <img data-src="img/team/p4-final.jpg" class="lazyload img-responsive img-circle" alt="Member 4">
                         <h2>Muriel <span class="text-uppercase">Roger</span></h2>
                         <p class="text-muted">Voix, Percussions légères</p>
                     </div>
@@ -214,7 +214,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
+                                <img data-src="img/team/p4-final.jpg" class="lazyload img-responsive img-circle" alt="Member 4">
                                 <h2>Muriel <span class="text-uppercase">Roger</span></h2>
                                 <p class="text-muted">Voix, Percussions légères</p>
                             </div>
@@ -237,7 +237,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
+                                <img data-src="img/team/p3-final.jpg" class="lazyload img-responsive img-circle" alt="Member 3">
                                 <h2>Cécile <span class="text-uppercase">Chabert</span></h2>
                                 <p class="text-muted">Voix, Percussions légères</p>
                             </div>
@@ -260,7 +260,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
+                                <img data-src="img/team/p1-final.jpg" class="lazyload img-responsive img-circle" alt="Bernard Vignal">
                                 <h2>Bernard <span class="text-uppercase">Vignal</span></h2>
                                 <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
                             </div>
@@ -283,7 +283,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
+                                <img data-src="img/team/p2-final.jpg" class="lazyload img-responsive img-circle" alt="Member 2">
                                 <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
                                 <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                             </div>
@@ -370,7 +370,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/gallery/1-preview.jpg" class="img-responsive"
+                        <img data-src="img/gallery/1-preview.jpg" class="lazyload img-responsive"
                              alt="Cécile Chabert et Muriel Roger">
                     </a>
                 </div>
@@ -381,7 +381,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/gallery/4-preview.jpg" class="img-responsive"
+                        <img data-src="img/gallery/4-preview.jpg" class="lazyload img-responsive"
                              alt="Bernard Vignal et Emmanuel Megier">
                     </a>
                 </div>
@@ -493,7 +493,7 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
-                                <img class="img-responsive img-centered" src="img/gallery/1.jpg" alt="">
+                                <img class="lazyload img-responsive img-centered" data-src="img/gallery/1.jpg" alt="">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -521,7 +521,7 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
-                                <img class="img-responsive img-centered" src="img/gallery/2.jpg" alt="">
+                                <img class="lazyload img-responsive img-centered" data-src="img/gallery/2.jpg" alt="">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -549,7 +549,7 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
-                                <img class="img-responsive img-centered" src="img/gallery/4.jpg" alt="">
+                                <img class="lazyload img-responsive img-centered" data-src="img/gallery/4.jpg" alt="">
                             </div>
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
