--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="section-heading">Contactez-nous</h1>
-                    <h2 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h2>
+                    <h2 class="section-heading">Contactez-nous</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row">
@@ -434,7 +434,8 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="tel" class="form-control" placeholder="Votre numéro de téléphone *"
-                                           id="phone">
+                                           id="phone" required
+                                           data-validation-required-message="Veuillez saisir votre numéro de téléphone.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -446,10 +447,12 @@
                                 </div>
                             </div>
                             <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <!--<div class="g-recaptcha" data-sitekey="6LdRWRMUAAAAANJmTvQOI0Z_KMJ130XZPHWZ351E"></div>-->
-                                <div id="success"></div>
+                            <div class="col-lg-12">
+                                <div class="g-recaptcha" data-sitekey="6LdRWRMUAAAAANJmTvQOI0Z_KMJ130XZPHWZ351E"></div>
+                            </div>
+                            <div class="col-lg-12 ">
                                 <button type="submit" class="btn btn-xl">Envoyer</button>
+                                <div id="success"></div>
                             </div>
                         </div>
                     </form>
