--- a/index.html
+++ b/index.html
@@ -394,12 +394,17 @@
     <div class="hero">
         <div class="overlay-light">
             <div class="container">
-                <div class="row">
+                <div class="row row-no-mg">
                     <div class="col-lg-8">
                         <h1 class="section-heading">Nous vous proposons des ateliers<br/>
                             De sensibilisation aux chansons du spectable.</h1>
                         <h2 class="section-subheading">Les ateliers seront menés par un membre du groupe</h2>
                         <h2 class="section-subheading">Spécialiste des choeurs d'enfants.</h2>
+                        <p>Plus d'information, veuillez nous contacter grâce au formulaire ci-dessous</p>
+                        <a href="#contact" class="page-scroll next-button">
+                            <i class="fa fa-angle-down text-center"></i>
+                        </a>
+
                     </div>
                 </div>
             </div>
