--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                 <h1>Ecoutez nos extraits en exclusivité</h1>
                                 <audio id="audio" tabindex="0" preload="auto" controls="controls">
                                     <source type="audio/mp3"
-                                            src="audio/1-approche.mp3"/>
+                                            src="https://media-6af8.kxcdn.com/audio/1-approche.mp3"/>
                                     <div class="audio-no-html5">
                                         <p>Désolé, votre navigateur ne permet pas de jouer notre musique.
                                             Veuillez
