--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 <section id="music">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="container-fluid">
                     <!--<div class="row video-content">-->
                     <!--<div class="col-lg-12">-->
@@ -368,26 +368,26 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 hide-from-768w">
-                <div class="col-sm-6 col-md-12 gallery-item">
+            <div class="col-md-12 hide-from-768w">
+                <div class="col-sm-6 gallery-item">
                     <a href="#galleryModal1" class="gallery-link" data-toggle="modal">
                         <div class="gallery-hover">
                             <div class="gallery-hover-content">
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="img/gallery/1-preview.jpg" class="lazyload img-responsive"
+                        <img data-src="img/gallery/1-preview.jpg" class="lazyload img-responsive" width="250px"
                              alt="Cécile Chabert et Muriel Roger">
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-12 gallery-item">
+                <div class="col-sm-6 gallery-item">
                     <a href="#galleryModal4" class="gallery-link" data-toggle="modal">
                         <div class="gallery-hover">
                             <div class="gallery-hover-content">
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="img/gallery/4-preview.jpg" class="lazyload img-responsive"
+                        <img data-src="img/gallery/4-preview.jpg" class="lazyload img-responsive" width="250px"
                              alt="Bernard Vignal et Emmanuel Megier">
                     </a>
                 </div>
