--- a/index.html
+++ b/index.html
@@ -636,6 +636,7 @@
         </div>
     </div>
 </div>
+
 <div class="element-modal modal fade" id="legalTerms" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -838,7 +839,39 @@
     </div>
 </div>
 
+<div class="cookie-consent">
+    <p class="lead lead-dark cookie-consent-p">
+        <span class="cookie-consent-part">
+            En poursuivant votre navigation sur le site, vous acceptez l'installation et l'utilisation de cookies
+            sur votre poste pour personnaliser votre affichage. Pour en savoir plus sur l'utilisation des cookies
+            pour ce site,
+        </span>
+        <span class="cookie-consent-terms">
+            <a href="{{ path('terms') }}#terms-cookies">
+                cliquez ici
+            </a>
+        </span>
+        <span class="cookie-consent-part">
+            .
+        </span>
+    </p>
+    <div class="cc-button-wrapper">
+        <div class="btn btn-success cc-btn cc-btn-positive">J'accepte</div>
+        <div class="btn btn-warning cc-btn cc-btn-negative">Je refuse</div>
+    </div>
+</div>
 <div id="viewport-spy"></div>
+
+<script id="analytics-script">
+//    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+//            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+//        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+//    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+//
+//    ga('create', 'UA-XXXXXXXX', 'auto');
+//    ga('send', 'pageview');
+
+</script>
 <script src="https://www.google.com/recaptcha/api.js?hl=fr"></script>
 <script src="https://media-6af8.kxcdn.com/vendor/lazysizes/lazysizes.min.js" async=""></script>
 <script src="https://media-6af8.kxcdn.com/vendor/jquery/jquery.min.js"></script>
@@ -846,7 +879,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="https://media-6af8.kxcdn.com/js/jqBootstrapValidation.js"></script>
 <script src="https://media-6af8.kxcdn.com/js/contact_me.js"></script>
-<script async src="https://media-6af8.kxcdn.com/js/agency.js"></script>
+<script async src="js/agency.js"></script>
 </body>
 
 </html>
