--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <meta name="author" content="Bernard Vignal">
 
     <title>Bernard Vignal</title>
+    <meta name="description"
+          content="Bernard Vignal, auteur compositeur de chansons françaises dans la Drôme, à Saint-Avit. Son groupe de
+                    2 musiciens et 2 chanteuses vont enchanteront dès le premier instant. Cliquez sur le lien pour en
+                    savoir plus !" />
+    <meta name="copyright" content="Bernard Vignal, tous droits réservés © 2016" />
+    <meta name="robots" content="index, follow" />
 
     <!-- Bootstrap Core CSS -->
     <link href="https://media-6af8.kxcdn.com/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,16 +49,13 @@
 
 <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Réduire la navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <!--<a class="navbar-brand page-scroll" href="#page-top">Vignal en chanson</a>-->
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden">
@@ -75,9 +78,7 @@
                 </li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
 </nav>
 
 <header id="header">
@@ -361,13 +362,13 @@
                                             <span class="audio-track-name">Approche, Approche</span>
                                         </a>
                                     </li>
-                                    <li class="audio-track audio-track-odd ">
+                                    <li class="audio-track audio-track-odd">
                                         <a href="audio/2-un-beau-tresor.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Un beau trésor</span>
                                         </a>
                                     </li>
-                                    <li class="audio-track audio-track-even ">
+                                    <li class="audio-track audio-track-even">
                                         <a href="audio/3-le-blues-du-cycliste.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Le blues du cycliste</span>
@@ -840,37 +841,33 @@
 </div>
 
 <div class="cookie-consent">
-    <p class="lead lead-dark cookie-consent-p">
+    <p class="cookie-consent-p">
         <span class="cookie-consent-part">
-            En poursuivant votre navigation sur le site, vous acceptez l'installation et l'utilisation de cookies
-            sur votre poste pour personnaliser votre affichage. Pour en savoir plus sur l'utilisation des cookies
-            pour ce site,
+            En poursuivant votre visite de ce site, vous acceptez l'installation et l'utilisation de cookies
+            sur votre poste pour améliorer votre expérience de navigation. Pour en savoir plus,
         </span>
         <span class="cookie-consent-terms">
-            <a href="{{ path('terms') }}#terms-cookies">
+            <a href="#legalTerms" data-toggle="modal">
                 cliquez ici
             </a>
         </span>
-        <span class="cookie-consent-part">
-            .
-        </span>
+        <span class="cookie-consent-part">.</span>
     </p>
     <div class="cc-button-wrapper">
-        <div class="btn btn-success cc-btn cc-btn-positive">J'accepte</div>
-        <div class="btn btn-warning cc-btn cc-btn-negative">Je refuse</div>
+        <div class="cc-btn cc-btn-positive"><i class="fa fa-times"></i></div>
     </div>
 </div>
+
 <div id="viewport-spy"></div>
 
 <script id="analytics-script">
-//    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-//            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-//        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-//    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-//
-//    ga('create', 'UA-XXXXXXXX', 'auto');
-//    ga('send', 'pageview');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-91643546-2', 'auto');
+    ga('send', 'pageview');
 </script>
 <script src="https://www.google.com/recaptcha/api.js?hl=fr"></script>
 <script src="https://media-6af8.kxcdn.com/vendor/lazysizes/lazysizes.min.js" async=""></script>
