--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="https://media-6af8.kxcdn.com/css/agency.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -870,13 +870,15 @@
     ga('send', 'pageview');
 </script>
 <script src="https://www.google.com/recaptcha/api.js?hl=fr"></script>
-<script src="https://media-6af8.kxcdn.com/vendor/lazysizes/lazysizes.min.js" async=""></script>
-<script src="https://media-6af8.kxcdn.com/vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="https://media-6af8.kxcdn.com/js/jqBootstrapValidation.js"></script>
-<script src="https://media-6af8.kxcdn.com/js/contact_me.js"></script>
-<script async src="js/agency.js"></script>
+
+<!--<script src="vendor/lazysizes/lazysizes.min.js" async=""></script>-->
+<!--<script src="vendor/jquery/jquery.min.js"></script>-->
+<!--<script src="vendor/bootstrap/js/bootstrap.min.js"></script>-->
+<!--<script src="js/jqBootstrapValidation.js"></script>-->
+<!--<script src="js/contact_me.js"></script>-->
+
+<script src="https://media-6af8.kxcdn.com/vendor/vendor.min.js"></script>
+<script async src="https://media-6af8.kxcdn.com/js/agency.min.js"></script>
 </body>
 
 </html>
