#32 : optimisation of mp3 preloading

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="team-member">
                         <img data-src="https://media-6af8.kxcdn.com/img/team/p2-final.jpg"
                              class="lazyload img-responsive img-circle" alt="Member 2">
-                        <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
+                        <h2>Emmanuel <span class="text-uppercase">Mégier</span></h2>
                         <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                                 <img data-src="https://media-6af8.kxcdn.com/img/team/p2-final.jpg"
                                      class="lazyload img-responsive img-circle"
                                      alt="Member 2">
-                                <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
+                                <h2>Emmanuel <span class="text-uppercase">Mégier</span></h2>
                                 <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -336,9 +336,9 @@
                         <div class="player col-lg-12 col-no-pd">
                             <div class="audio-wrapper">
                                 <h1>Ecoutez nos extraits en exclusivité</h1>
-                                <audio id="audio" tabindex="0" preload="auto" controls="controls">
+                                <audio class="lazyload" id="audio" tabindex="0" preload="none" controls="controls">
                                     <source type="audio/mp3"
-                                            src="audio/1-approche.mp3"/>
+                                            src="https://media-6af8.kxcdn.com/audio/1-approche.mp3"/>
                                     <div class="audio-no-html5">
                                         <p>Désolé, votre navigateur ne permet pas de jouer notre musique.
                                             Veuillez
@@ -357,19 +357,19 @@
                                 <div class="playlist-controls"></div>
                                 <ul id="playlist">
                                     <li class="audio-track audio-track-even active">
-                                        <a href="audio/1-approche.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/audio/1-approche.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span class="audio-track-name">Approche, Approche</span>
                                         </a>
                                     </li>
                                     <li class="audio-track audio-track-odd">
-                                        <a href="audio/2-un-beau-tresor.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/audio/2-un-beau-tresor.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Un beau trésor</span>
                                         </a>
                                     </li>
                                     <li class="audio-track audio-track-even">
-                                        <a href="audio/3-le-blues-du-cycliste.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/audio/3-le-blues-du-cycliste.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Le blues du cycliste</span>
                                         </a>
@@ -877,7 +877,7 @@
 <!--<script src="js/jqBootstrapValidation.js"></script>-->
 <!--<script src="js/contact_me.js"></script>-->
 
-<script src="https://media-6af8.kxcdn.com/vendor/vendor.min.js"></script>
+<script src="vendor/vendor.min.js"></script>
 <script async src="https://media-6af8.kxcdn.com/js/agency.min.js"></script>
 </body>
 
